# nx-benchmarks

./: .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  README.md  justfile  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: lint.yml
scripts/: plot_results.py
tests/: conftest.py  test_bfs.py  test_sssp.py  test_tc.py  test_triangles.py
