[project]
name = "nx-bench"
version = "0.1.0"
description = "NetworkX benchmark suite for BFS, SSSP, and Triangle Counting"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.300",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --benchmark-disable-gc"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.300",
    "pre-commit>=3.0.0",
]
